Make sure sticky header doesnt show if not on mobile

--- a/wp-content/themes/ipbs-largo/less/navigation.less
+++ b/wp-content/themes/ipbs-largo/less/navigation.less
@@ -1,5 +1,8 @@
 // sticky nav
 .sticky-nav-wrapper {
+    @media (min-width: 769px) {
+        display: none;
+    }
     .sticky-nav-container {
         .close {
             display: none;
